# Vigilance

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Vigilance.sln  Vigilance.sln.DotSettings  package-lock.json  package.json
.github/workflows/: publish-nuget.yml
src/: vigilance.c  vigilance.h
src/Vigilance/: Vigilance.csproj  Vigilance.props
src/Vigilance/Core/: Asset.cs  Camera.cs  EachAction.cs  Entity.cs  Events.cs  FileSystem.cs  Game.cs  GameConfig.cs  GameSystem.cs  IPrefab.cs  ISystem.cs  Platform.cs  Scene.cs  Time.cs
src/Vigilance/Drawing/: Circle.cs  Color.cs  Font.cs  Glyph.cs  GlyphInfo.cs  Graphics.cs  Image.cs  Interpolation.cs  Rectangle.cs  Renderer.cs  Text.cs  Texture.cs  WritableTexture.cs
src/Vigilance/Input/: Cursor.cs  Gamepad.cs  GamepadAxis.cs  GamepadButton.cs  Key.cs  Keyboard.cs  Mouse.cs  MouseButton.cs
src/Vigilance/Math/: Coordinates.cs  Precision.cs  Transform.cs  Vector2.cs
src/Vigilance/Systems/: CameraSystem.cs  FpsCounterSystem.cs  GraphicsSystem.cs
src/core/: array.c  array.h  char-ptr.c  char-ptr.h  console.c  console.h  gc.c  gc.h  parse.c  parse.h  random.c  random.h  string.c  string.h  system.c  system.h
src/include/: vigilance-core.h  vigilance-math.h  vigilance.c  vigilance.h
src/math/: math.h  random.c  random.h
